enhancment add company in header request to get id token and refresh token
